# serlvers

./: .boring  ChangeLog  Makefile.cvs  README  SConstruct  TODO  configure.ac  configure.in
doc/: overview.edoc
ebin/: serlvers.app
lib/serlvers/src/: gen_daytime.erl
releases/0.0.0/: serlvers.rel
src/: Makefile.am  daytime.erl  dns_msg.erl  echo.erl  echo_launcher.erl  echo_sup.erl  echo_tcp.erl  echo_udp.erl  gen_chargen.erl  gen_daytime.erl  gen_dns.erl  gen_echo.erl  gen_time.erl  launcher.erl  launcher_sup.erl  serlvers.app
tool/: erlang.py
