AC_INIT(Modules to write servers, 0.0.0, pupeno@pupeno.com, serlvers)
AC_COPYRIGHT(Copyright (C) 2006 Jose Pablo Pupeno Fernandez)

dnl Require autoconf version >=2.59c. first one with erlang macros
AC_PREREQ(2.59c)
dnl Require automake version >=1.9.5.
AM_INIT_AUTOMAKE(1.9.5)

AC_ERLANG_NEED_ERLC

AC_ERLANG_SUBST_INSTALL_LIB_SUBDIR(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)

AC_ERLANG_NEED_ERLC

AC_OUTPUT(Makefile src/Makefile)
